Fix add company/school; get companies/schools;
